--- a/articles/app-service/index.yml
+++ b/articles/app-service/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 178ae177d3183d492540f03c8dc1dfa064ddeb22
-ms.sourcegitcommit: e68df5b9c04b11c8f24d616f4e687fe4e773253c
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 12/20/2018
-ms.locfileid: "53652435"
 documentType: LandingData
 title: Documentatie over App Service
 metadata:
   document_id: 6c8db72a-cdb7-8fb7-ed57-ed75afcca4d0
-  title: Documentatie voor Azure App Service - zelfstudies, API-verwijzing
-  meta.description: Learn how to use App Service to build and host websites and web applications, including RESTful APIs and mobile back ends.
+  title: 'Documentatie voor Azure App Service - zelfstudies, API-verwijzing'
+  meta.description: 'Learn how to use App Service to build and host websites and web applications, including RESTful APIs and mobile back ends.'
   services: app-service
   author: czeumault
   manager: carolz
@@ -21,148 +15,148 @@ metadata:
   ms.date: 01/23/2017
   ms.author: carolz
 abstract:
-  description: Met Azure App Service kunt u web-apps, mobiele back-ends en RESTful API's bouwen en hosten in de programmeertaal van uw keuze, zonder hiervoor infrastructuur te beheren. Het biedt automatisch schalen en een hoge beschikbaarheid, ondersteuning voor zowel Windows als Linux en maakt automatische implementaties mogelijk vanuit GitHub, Azure DevOps of een willekeurige Git-repo. Ontdek met onze snelstarts, zelfstudies en voorbeelden hoe u Azure App Service gebruikt.
+  description: 'Met Azure App Service kunt u web-apps, mobiele back-ends en RESTful API''s bouwen en hosten in de programmeertaal van uw keuze, zonder hiervoor infrastructuur te beheren. Het biedt automatisch schalen en een hoge beschikbaarheid, ondersteuning voor zowel Windows als Linux en maakt automatische implementaties mogelijk vanuit GitHub, Azure DevOps of een willekeurige Git-repo. Ontdek met onze snelstarts, zelfstudies en voorbeelden hoe u Azure App Service gebruikt.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
-      src: https://docs.microsoft.com/azure/app-service/media/index/create-a-web-app-with-nodejs-and-azure-app-service.png
+      src: 'https://docs.microsoft.com/azure/app-service/media/index/create-a-web-app-with-nodejs-and-azure-app-service.png'
       width: 250
-    title: Maak een app met Node.js en Azure App Service. (2:41)
-    href: https://azure.microsoft.com/resources/videos/create-a-web-app-with-nodejs-and-azure-app-service/
+    title: 'Maak een app met Node.js en Azure App Service. (2:41)'
+    href: 'https://azure.microsoft.com/resources/videos/create-a-web-app-with-nodejs-and-azure-app-service/'
     width: 250
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: 'Ontdek hoe u uw eerste toepassing in de cloud implementeert met behulp van App Service:'
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: https://docs.microsoft.com/azure/app-service/media/index/logo_net.svg
-      text: .NET
-      href: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-dotnet
-    - image:
-        src: https://docs.microsoft.com/azure/app-service/media/index/logo_nodejs.svg
-      text: Node.js
-      href: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-nodejs
-    - image:
-        src: https://docs.microsoft.com/azure/app-service/media/index/logo_php.svg
-      text: PHP
-      href: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-php
-    - image:
-        src: https://docs.microsoft.com/azure/app-service/media/index/logo_java.svg
-      text: Java
-      href: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-java
-    - image:
-        src: https://docs.microsoft.com/azure/app-service/media/index/logo_python.svg
-      text: Python (op Linux)
-      href: https://docs.microsoft.com/azure/app-service/containers/quickstart-python
-    - image:
-        src: https://docs.microsoft.com/azure/app-service/media/index/logo_html5.svg
-      text: HTML
-      href: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-html
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_docker.svg
-      text: Aangepaste Windows-container (Preview)
-      href: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-windows-container
-  - type: paragraph
-    text: 'Meer informatie over het implementeren van uw code:'
-  - type: list
-    style: icon48
+      - type: paragraph
+        text: 'Ontdek hoe u uw eerste toepassing in de cloud implementeert met behulp van App Service:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_net.svg'
+            text: .NET
+            href: 'https://docs.microsoft.com/azure/app-service/app-service-web-get-started-dotnet'
+          - image:
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_nodejs.svg'
+            text: Node.js
+            href: 'https://docs.microsoft.com/azure/app-service/app-service-web-get-started-nodejs'
+          - image:
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_php.svg'
+            text: PHP
+            href: 'https://docs.microsoft.com/azure/app-service/app-service-web-get-started-php'
+          - image:
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_java.svg'
+            text: Java
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-java'
+          - image:
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_python.svg'
+            text: Python (op Linux)
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-python'
+          - image:
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_html5.svg'
+            text: HTML
+            href: 'https://docs.microsoft.com/azure/app-service/app-service-web-get-started-html'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_docker.svg'
+            text: Aangepaste Windows-container (Preview)
+            href: 'https://docs.microsoft.com/azure/app-service/app-service-web-get-started-windows-container'
+      - type: paragraph
+        text: 'Meer informatie over het implementeren van uw code:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: media/index/zip.svg
+            text: ZIP/WAR
+            href: deploy-zip.md
+          - image:
+              src: media/index/ftp.svg
+            text: FTP
+            href: deploy-ftp.md
+          - image:
+              src: media/index/git-icon.svg
+            text: Lokale Git
+            href: deploy-local-git.md
+          - image:
+              src: 'https://docs.microsoft.com/azure/media/index/logo_vs-team-services.svg'
+            text: Azure DevOps
+            href: 'https://docs.microsoft.com/vsts/build-release/apps/cd/azure/aspnet-core-to-azure-webapp?toc=/vsts/deploy-azure/toc.json&bc=/vsts/deploy-azure/breadcrumb/toc.json'
+          - image:
+              src: media/index/github-octicons.svg
+            text: GitHub
+            href: deploy-continuous-deployment.md
+          - image:
+              src: media/index/bitbucket.svg
+            text: Bitbucket
+            href: deploy-continuous-deployment.md
+          - image:
+              src: media/index/dropbox.svg
+            text: DropBox-synchronisatie
+            href: deploy-content-sync.md
+          - image:
+              src: media/index/onedrive.svg
+            text: OneDrive-synchronisatie
+            href: deploy-content-sync.md
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - image:
-        src: media/index/zip.svg
-      text: ZIP/WAR
-      href: deploy-zip.md
-    - image:
-        src: media/index/ftp.svg
-      text: FTP
-      href: deploy-ftp.md
-    - image:
-        src: media/index/git-icon.svg
-      text: Lokale Git
-      href: deploy-local-git.md
-    - image:
-        src: https://docs.microsoft.com/azure/media/index/logo_vs-team-services.svg
-      text: Azure DevOps
-      href: https://docs.microsoft.com/vsts/build-release/apps/cd/azure/aspnet-core-to-azure-webapp?toc=/vsts/deploy-azure/toc.json&bc=/vsts/deploy-azure/breadcrumb/toc.json
-    - image:
-        src: media/index/github-octicons.svg
-      text: GitHub
-      href: deploy-continuous-deployment.md
-    - image:
-        src: media/index/bitbucket.svg
-      text: Bitbucket
-      href: deploy-continuous-deployment.md
-    - image:
-        src: media/index/dropbox.svg
-      text: DropBox-synchronisatie
-      href: deploy-content-sync.md
-    - image:
-        src: media/index/onedrive.svg
-      text: OneDrive-synchronisatie
-      href: deploy-content-sync.md
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Meer informatie over het implementeren, beheren en controleren van beveiligde web-apps in Azure
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Meer informatie over het implementeren, beheren en controleren van beveiligde web-apps in Azure'
+      - type: list
+        style: ordered
+        items:
+          - html: Een toepassing maken met behulp van <a href="/azure/app-service/app-service-web-tutorial-dotnet-sqldatabase">.NET met Azure SQL DB</a> of <a href="/azure/app-service/app-service-web-tutorial-nodejs-mongodb-app">Node.js met MongoDB</a>
+          - html: <a href="/azure/app-service/app-service-web-tutorial-custom-domain">Een bestaand aangepast domein toewijzen aan uw toepassing </a>
+          - html: <a href="/azure/app-service/app-service-web-tutorial-custom-SSL">Een bestaand SSL-certificaat binden aan uw toepassing</a>
+          - html: <a href="/azure/app-service/app-service-web-tutorial-content-delivery-network">Een CDN toevoegen aan uw toepassing</a>
+  - title: Uw vaardigheden ontwikkelen met Microsoft Learn
     items:
-    - html: Een toepassing maken met behulp van <a href="/azure/app-service/app-service-web-tutorial-dotnet-sqldatabase">.NET met Azure SQL DB</a> of <a href="/azure/app-service/app-service-web-tutorial-nodejs-mongodb-app">Node.js met MongoDB</a>
-    - html: <a href="/azure/app-service/app-service-web-tutorial-custom-domain">Een bestaand aangepast domein toewijzen aan uw toepassing</a>
-    - html: <a href="/azure/app-service/app-service-web-tutorial-custom-SSL">Een bestaand SSL-certificaat binden aan uw toepassing</a>
-    - html: <a href="/azure/app-service/app-service-web-tutorial-content-delivery-network">Een CDN toevoegen aan uw toepassing</a>
-- title: Uw vaardigheden ontwikkelen met Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Een webtoepassing hosten met Azure App Service
+            href: /learn/modules/host-a-web-app-with-azure-app-service/
+            image:
+              src: /learn/achievements/host-a-web-app-with-azure-app-service.svg
+              href: /learn/modules/host-a-web-app-with-azure-app-service/
+      - type: paragraph
+        text: <a href="/learn/browse/">Meer interactief leren...</a>
+  - title: Gratis Pluralsight-videotraining
     items:
-    - title: Een webtoepassing hosten met Azure App Service
-      href: /learn/modules/host-a-web-app-with-azure-app-service/
-      image:
-        src: /learn/achievements/host-a-web-app-with-azure-app-service.svg
-        href: /learn/modules/host-a-web-app-with-azure-app-service/
-  - type: paragraph
-    text: <a href="/learn/browse/">Meer interactief leren...</a>
-- title: Gratis Pluralsight-videotraining
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Ontwikkelen met .NET
+            href: 'https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02'
+          - title: Ontwikkelen met Node.js
+            href: 'https://www.pluralsight.com/courses/developing-nodejs-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://www.pluralsight.com/courses/developing-nodejs-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02'
+  - title: Voorbeelden
     items:
-    - title: Ontwikkelen met .NET
-      href: https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
-    - title: Ontwikkelen met Node.js
-      href: https://www.pluralsight.com/courses/developing-nodejs-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://www.pluralsight.com/courses/developing-nodejs-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
-- title: Voorbeelden
-  items:
-  - type: paragraph
-    text: Zoek scripts om algemene taken te beheren.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: Zoek scripts om algemene taken te beheren.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a>
+          - html: <a href="/cli/azure/appservice">Azure-CLI</a>
+  - title: Naslaginformatie
     items:
-    - html: <a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a>
-    - html: <a href="/cli/azure/appservice">Azure-CLI</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Opdrachtregel
-      html: <p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p><p><a href="/cli/azure/appservice">Azure-CLI</a></p>
-    - title: Talen
-      html: <p><a href="/dotnet/api">.NET</a></p><p><a href="/java/api/">Java</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/appservice">Naslaginformatie over REST-API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Opdrachtregel
+            html: <p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p><p><a href="/cli/azure/appservice">Azure-CLI</a></p>
+          - title: Talen
+            html: <p><a href="/dotnet/api">.NET</a></p><p><a href="/java/api/">Java</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/appservice">Naslaginformatie over REST-API</a></p>
