--- a/articles/cognitive-services/text-analytics/toc.yml
+++ b/articles/cognitive-services/text-analytics/toc.yml
@@ -5,6 +5,8 @@ items:
   items:
   - name: Wat is Text Analytics-API?
     href: overview.md
+  - name: Voorbeeldgebruikerscenario's
+    href: text-analytics-user-scenarios.md
   expanded: true
 - name: Snelstartgidsen
   items:
@@ -24,13 +26,16 @@ items:
     href: quickstarts/ruby.md
 - name: Zelfstudies
   items:
-  - name: Sentimentanalyse voor streaminggegevens met behulp van Azure Databricks
-    href: ../../azure-databricks/databricks-sentiment-analysis-cognitive-services.md
-    maintainContext: true
-  - name: Text Analytics met Power BI
+  - name: Power BI integreren om klantenfeedback te analyseren
     href: Tutorials/tutorial-power-bi-key-phrases.md
   - name: Tekstanalyse in Power Apps
     href: https://powerapps.microsoft.com/tutorials/cognitive-services-api/
+  - name: Sentimentanalyse voor streaminggegevens met behulp van Azure Databricks
+    href: ../../azure-databricks/databricks-sentiment-analysis-cognitive-services.md
+    maintainContext: true
+  - name: Flask gebruiken om tekst te vertalen, gevoel te analyseren en spraak na te bootsen
+    href: https://docs.microsoft.com/azure/cognitive-services/translator/tutorial-build-flask-app-translation-synthesis
+    maintainContext: true
 - name: Handleidingen
   items:
   - name: Aanmelden
@@ -79,6 +84,8 @@ items:
       href: https://godoc.org/github.com/Azure/azure-sdk-for-go/services/cognitiveservices/v2.0/textanalytics
 - name: Resources
   items:
+  - name: Bepaal het gevoel van opmerkingen in een Yammer-groep met MS Flow
+    href: https://docs.microsoft.com/Yammer/integrate-yammer-with-other-apps/sentiment-analysis-flow-azure
   - name: Externe en community-inhoud
     href: text-analytics-resource-external-community.md
   - name: Veelgestelde vragen
@@ -97,9 +104,9 @@ items:
     href: https://azure.microsoft.com/services/cognitive-services/text-analytics/
   - name: UserVoice
     href: https://cognitive.uservoice.com/forums/555922-text-analytics
-ms.openlocfilehash: 1759bee73caeb18ac96a228bb3a81e697aa62089
-ms.sourcegitcommit: cf88cf2cbe94293b0542714a98833be001471c08
+ms.openlocfilehash: 6c25fe6b6fa10c592cb9462e9fb712575f61bdd1
+ms.sourcegitcommit: 41015688dc94593fd9662a7f0ba0e72f044915d6
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54475625"
+ms.lasthandoff: 04/11/2019
+ms.locfileid: "59500818"
