--- a/articles/notification-hubs/TOC.yml
+++ b/articles/notification-hubs/TOC.yml
@@ -25,6 +25,14 @@ items:
       href: notification-hubs-aspnet-backend-android-xplat-segmented-gcm-push-notification.md
     - name: Pushmeldingen verzenden naar specifieke Android-appgebruikers
       href: notification-hubs-aspnet-backend-gcm-android-push-to-user-google-notification.md
+  - name: Baidu
+    items:
+    - name: Pushmeldingen verzenden met behulp van Baidu Cloud Push
+      href: notification-hubs-baidu-china-android-notifications-get-started.md
+  - name: Chrome
+    items:
+    - name: Pushmeldingen verzenden naar Chrome-apps
+      href: notification-hubs-chrome-push-notifications-get-started.md
   - name: iOS
     items:
     - name: Pushmeldingen verzenden naar iOS-apps
@@ -37,6 +45,10 @@ items:
       href: notification-hubs-ios-xplat-localized-apns-push-notification.md
     - name: Pushmeldingen verzenden naar specifieke gebruikers
       href: notification-hubs-aspnet-backend-ios-apple-apns-notification.md
+  - name: Kindle
+    items:
+    - name: Pushmeldingen verzenden naar een Kindle-toepassing met behulp van Amazon Device Messaging
+      href: notification-hubs-kindle-amazon-adm-push-notification.md
   - name: Windows Phone
     items:
     - name: Pushmeldingen verzenden naar Windows Phone-apps
@@ -55,18 +67,6 @@ items:
       href: notification-hubs-aspnet-backend-windows-dotnet-wns-notification.md
     - name: Locatiegebaseerde pushmeldingen verzenden
       href: notification-hubs-push-bing-spatial-data-geofencing-notification.md
-  - name: Baidu
-    items:
-    - name: Pushmeldingen verzenden met behulp van Baidu Cloud Push
-      href: notification-hubs-baidu-china-android-notifications-get-started.md
-  - name: Chrome
-    items:
-    - name: Pushmeldingen verzenden naar Chrome-apps
-      href: notification-hubs-chrome-push-notifications-get-started.md
-  - name: Kindle
-    items:
-    - name: Pushmeldingen verzenden naar een Kindle-toepassing met behulp van Amazon Device Messaging
-      href: notification-hubs-kindle-amazon-adm-push-notification.md
 - name: Voorbeelden
   items:
   - name: Codevoorbeelden
@@ -140,7 +140,9 @@ items:
     href: /dotnet/api/microsoft.azure.notificationhubs
   - name: PowerShell
     href: /powershell/module/az.notificationhubs
-  - name: REST-API
+  - name: REST-API voor Notification Hubs-service
+    href: https://docs.microsoft.com/previous-versions/azure/reference/dn223264(v%3dazure.100)
+  - name: REST API voor beheer
     href: /rest/api/notificationhubs/
   - name: Resource Manager-sjabloon
     href: /azure/templates/microsoft.notificationhubs/allversions
@@ -148,6 +150,8 @@ items:
   items:
   - name: Veelgestelde vragen
     href: notification-hubs-push-notification-faq.md
+  - name: Google GCM naar FCM-migratie
+    href: notification-hubs-gcm-to-fcm.md
   - name: SDK's
     href: notification-hubs-sdks.md
   - name: Azure-roadmap
@@ -164,9 +168,9 @@ items:
     href: https://azure.microsoft.com/regions/services/
   - name: Ondersteuningsopties
     href: https://azure.microsoft.com/support/options/
-ms.openlocfilehash: 56ac5e9c55cd483dd86b64e93777ee8bda8757e4
-ms.sourcegitcommit: f8c592ebaad4a5fc45710dadc0e5c4480d122d6f
+ms.openlocfilehash: 0d7708a44e953659e1904fe2bc3b79364ba33926
+ms.sourcegitcommit: f24b62e352e0512dfa2897362021b42e0cb9549d
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 03/29/2019
-ms.locfileid: "58621461"
+ms.lasthandoff: 04/11/2019
+ms.locfileid: "59505326"
