--- a/articles/virtual-machines/workloads/sap/toc.yml
+++ b/articles/virtual-machines/workloads/sap/toc.yml
@@ -123,8 +123,10 @@ items:
       href: dbms_guide_sqlserver.md
     - name: DBMS-implementatie voor SAP-werkbelasting in virtuele Azure-machines voor Oracle
       href: dbms_guide_oracle.md
-    - name: DBMS-implementatie voor SAP-werkbelasting in virtuele Azure-machines voor IBM DB2
+    - name: DBMS-implementatie voor SAP-werkbelasting in virtuele Azure-machines voor IBM Db2
       href: dbms_guide_ibm.md
+    - name: Hoge beschikbaarheid van IBM Db2 LUW in Azure-VM's in SUSE Linux Enterprise Server
+      href: dbms-guide-ha-ibm.md
     - name: DBMS-implementatie voor SAP-werkbelasting in virtuele Azure-machines voor SAP ASE
       href: dbms_guide_sapase.md
     - name: Implementatie van SAP MaxDB, liveCache en Content Server in Azure
@@ -229,9 +231,9 @@ items:
   items:
   - name: Azure-roadmap
     href: https://azure.microsoft.com/roadmap/
-ms.openlocfilehash: e366d205b3d903ad79b26798a82ee05752ac5622
-ms.sourcegitcommit: 09bb15a76ceaad58517c8fa3b53e1d8fec5f3db7
+ms.openlocfilehash: b91931661ad91f813ca84e0c9b7bef4b22e2e975
+ms.sourcegitcommit: 1a19a5845ae5d9f5752b4c905a43bf959a60eb9d
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/01/2019
-ms.locfileid: "58762953"
+ms.lasthandoff: 04/11/2019
+ms.locfileid: "59489033"
