--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -270,6 +270,10 @@ items:
       href: application-sign-in-problem-federated-sso-gallery.md
     - name: Probleem met zelfontwikkelde app
       href: application-sign-in-problem-custom-dev.md
+- name: Naslaginformatie
+  items:
+  - name: Versiegeschiedenis van toepassingsproxy
+    href: application-proxy-release-version-history.md
 - name: Resources
   items:
   - name: Azure AD-implementatieplannen
@@ -290,9 +294,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-active-directory
   - name: Video's
     href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory
-ms.openlocfilehash: 498749e8e12b03ebc8c46f26cadc2db62731d59d
-ms.sourcegitcommit: d89b679d20ad45d224fd7d010496c52345f10c96
+ms.openlocfilehash: 0be32a824491c8278f498c44aaf8d782a76d73bb
+ms.sourcegitcommit: 41015688dc94593fd9662a7f0ba0e72f044915d6
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 03/12/2019
-ms.locfileid: "57790980"
+ms.lasthandoff: 04/11/2019
+ms.locfileid: "59500648"
