--- a/articles/iot-accelerators/toc.yml
+++ b/articles/iot-accelerators/toc.yml
@@ -180,9 +180,9 @@ items:
       items:
       - name: OPC Vault implementeren naar een bestaand project
         items:
-        - name: Communicatie van OPC Client en OPC PLC beveiligen
+        - name: Communicatie van OPC-client en OPC PLC beveiligen
           href: howto-opc-vault-deploy-existing-client-plc-communication.md
-        - name: OPC UA Client en OPC UA-servertoepassing beveiligen
+        - name: OPC UA-client en OPC UA-servertoepassing beveiligen
           href: howto-opc-vault-deploy-existing-client-server-communication.md
       - name: OPC Vault helemaal vanaf het begin implementeren
         href: howto-opc-vault-deploy-scratch.md
@@ -292,9 +292,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-iot-suite
   - name: Externe bewaking V1
     href: https://docs.microsoft.com/previous-versions/azure/iot-suite/
-ms.openlocfilehash: 02c728f7acef1bcc1436d87dd0c0d9509db8ec97
-ms.sourcegitcommit: 563f8240f045620b13f9a9a3ebfe0ff10d6787a2
+ms.openlocfilehash: 5adec8ee936df920e2b96c38c5a2e78828af5b2e
+ms.sourcegitcommit: 1a19a5845ae5d9f5752b4c905a43bf959a60eb9d
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/01/2019
-ms.locfileid: "58757205"
+ms.lasthandoff: 04/11/2019
+ms.locfileid: "59496451"
