--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -134,7 +134,12 @@ items:
     - name: Azure Media Player
       href: use-azure-media-player.md
   - name: Ontwikkelen met v3-API's
-    href: entities-overview.md
+    href: media-services-apis-overview.md
+    items:
+    - name: Entiteiten pagineren, filteren, ordenen
+      href: entities-overview.md
+    - name: RBAC
+      href: rbac-overview.md
   - name: Hulp bij migratie van v2 naar v3
     href: migrate-from-v2-to-v3.md
 - name: Handleidingen
@@ -154,6 +159,8 @@ items:
     - name: Ontwikkelen met SDK's
       href: developers-guide.md
       items:
+      - name: Verbinding maken met Java
+        href: configure-connect-java-howto.md
       - name: Verbinding maken met .NET
         href: configure-connect-dotnet-howto.md
       - name: Verbinding maken met Node.js
@@ -267,9 +274,9 @@ items:
     href: frequently-asked-questions.md
   - name: Azure-clouds en -regio's
     href: azure-clouds-regions.md
-ms.openlocfilehash: 10c1bf3de5de12521c865ddd7e661f5e7243bdd9
-ms.sourcegitcommit: 62d3a040280e83946d1a9548f352da83ef852085
+ms.openlocfilehash: 2b154c483e6c71016c023814818e35049ece59b7
+ms.sourcegitcommit: 1a19a5845ae5d9f5752b4c905a43bf959a60eb9d
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/08/2019
-ms.locfileid: "59259300"
+ms.lasthandoff: 04/11/2019
+ms.locfileid: "59494847"
