--- a/articles/notification-hubs/index.yml
+++ b/articles/notification-hubs/index.yml
@@ -1,18 +1,12 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 0d4968c0cfbc49f990eebbd84c8bd4d8ecac5fe7
-ms.sourcegitcommit: 70550d278cda4355adffe9c66d920919448b0c34
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/26/2019
-ms.locfileid: "58434735"
 documentType: LandingData
 title: Documentatie voor Azure Notification Hubs
 metadata:
-  title: Documentatie voor Azure Notification Hubs - zelfstudies, API-verwijzing | Microsoft Docs
-  description: Meer informatie over hoe u met Notification Hubs pushmeldingen van een willekeurige back-end verzendt naar een willekeurig mobiel apparaat. Zelfstudies, API-verwijzingen en andere documentatie.
+  title: 'Documentatie voor Azure Notification Hubs - zelfstudies, API-verwijzing | Microsoft Docs'
+  description: 'Meer informatie over hoe u met Notification Hubs pushmeldingen van een willekeurige back-end verzendt naar een willekeurig mobiel apparaat. Zelfstudies, API-verwijzingen en andere documentatie.'
   services: notification-hubs
   author: spelluru
-  manager: 
+  manager: null
   ms.service: notification-hubs
   ms.tgt_pltfrm: na
   ms.devlang: na
@@ -20,46 +14,47 @@ metadata:
   ms.date: 03/01/2017
   ms.author: spelluru
 abstract:
-  description: Informatie over het gebruik van Notification Hubs, een schaalbaar systeem, geschikt voor meerdere platforms, om snel pushmeldingen te verzenden naar toepassingen die worden uitgevoerd op verschillende soorten apparaten (Android, iOS, Windows, Windows Phone, Baidu, Kindle). <p>Zelfstudies, API-referenties en andere documentatie laten zien hoe u pushmeldingen instelt en verzendt van een willekeurige back-end naar een willekeurig mobiel apparaat.</p>
+  description: 'Informatie over het gebruik van Notification Hubs, een schaalbaar systeem, geschikt voor meerdere platforms, om snel pushmeldingen te verzenden naar toepassingen die worden uitgevoerd op verschillende soorten apparaten (Android, iOS, Windows, Windows Phone, Baidu, Kindle). <p>Zelfstudies, API-referenties en andere documentatie laten zien hoe u pushmeldingen instelt en verzendt van een willekeurige back-end naar een willekeurig mobiel apparaat.</p>'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: media/index/video.png
       width: 250
     title: Pushmeldingen naar Android-toepassingen
-    href: https://channel9.msdn.com/Shows/Azure-Friday/Using-Azure-Notification-Hubs-in-an-Android-Application
+    href: 'https://channel9.msdn.com/Shows/Azure-Friday/Using-Azure-Notification-Hubs-in-an-Android-Application'
     width: 250
 sections:
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: 'Informatie over het verzenden van pushmeldingen met Notification Hubs:'
-  - type: list
-    style: ordered
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: Pushmeldingen verzenden naar alle geregistreerde apparaten - <a href="/azure/notification-hubs/notification-hubs-android-push-notification-google-fcm-get-started">Android</a> | <a href="/azure/notification-hubs/notification-hubs-baidu-china-android-notifications-get-started">Baidu</a> | <a href="/azure/notification-hubs/notification-hubs-chrome-push-notifications-get-started">Chrome</a> | <a href="/azure/notification-hubs/notification-hubs-ios-apple-push-notification-apns-get-started">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-kindle-amazon-adm-push-notification">Kindle</a> | <a href="/azure/notification-hubs/notification-hubs-windows-store-dotnet-get-started-wns-push-notification">Windows</a> | <a href="/azure/notification-hubs/notification-hubs-windows-mobile-push-notifications-mpns">Windows Phone</a> | <a href="/azure/notification-hubs/xamarin-notification-hubs-push-notifications-android-gcm">Xamarin.Android</a> | <a href="/azure/notification-hubs/xamarin-notification-hubs-ios-push-notification-apns-get-started">Xamarin.iOS</a>
-    - html: Pushmeldingen verzenden naar specifieke apparaten - <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-android-xplat-segmented-gcm-push-notification">Android</a> | <a href="/azure/notification-hubs/notification-hubs-ios-xplat-segmented-apns-push-notification">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-windows-notification-dotnet-push-xplat-segmented-wns">Windows</a> | <a href="/azure/notification-hubs/notification-hubs-windows-phone-push-xplat-segmented-mpns-notification">Windows Phone</a>
-    - html: Pushmeldingen verzenden naar specifieke gebruikers - <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-gcm-android-push-to-user-google-notification">Android</a> | <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-ios-apple-apns-notification">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-windows-dotnet-wns-notification">Windows</a>
-    - html: Locatiegebaseerde pushmeldingen verzenden - <a href="/azure/notification-hubs/notification-hubs-push-bing-spatial-data-geofencing-notification">Windows</a>
-    - html: Persoonlijke en gelokaliseerde pushmeldingen verzenden - <a href="/azure/notification-hubs/notification-hubs-ios-xplat-localized-apns-push-notification">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-windows-store-dotnet-xplat-localized-wns-push-notification">Windows</a>
-- title: Voorbeelden
-  items:
-  - type: paragraph
-    text: Azure Notification Hubs-voorbeeldapps zijn uit meerdere bronnen beschikbaar. We bundelen platformspecifieke voorbeelden met de afzonderlijke SDK's (koppelingen hieronder). De zelfstandige opslagplaats met voorbeelden bevat ook voorbeelden voor andere platformen.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Informatie over het verzenden van pushmeldingen met Notification Hubs:'
+      - type: list
+        style: ordered
+        items:
+          - html: Pushmeldingen verzenden naar alle geregistreerde apparaten - <a href="/azure/notification-hubs/notification-hubs-android-push-notification-google-fcm-get-started">Android</a> | <a href="/azure/notification-hubs/notification-hubs-baidu-china-android-notifications-get-started">Baidu</a> | <a href="/azure/notification-hubs/notification-hubs-chrome-push-notifications-get-started">Chrome</a> | <a href="/azure/notification-hubs/notification-hubs-ios-apple-push-notification-apns-get-started">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-kindle-amazon-adm-push-notification">Kindle</a> | <a href="/azure/notification-hubs/notification-hubs-windows-store-dotnet-get-started-wns-push-notification">Windows</a> | <a href="/azure/notification-hubs/notification-hubs-windows-mobile-push-notifications-mpns">Windows Phone</a> | <a href="/azure/notification-hubs/xamarin-notification-hubs-push-notifications-android-gcm">Xamarin.Android</a> | <a href="/azure/notification-hubs/xamarin-notification-hubs-ios-push-notification-apns-get-started">Xamarin.iOS</a>
+          - html: Pushmeldingen verzenden naar specifieke apparaten - <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-android-xplat-segmented-gcm-push-notification">Android</a> | <a href="/azure/notification-hubs/notification-hubs-ios-xplat-segmented-apns-push-notification">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-windows-notification-dotnet-push-xplat-segmented-wns">Windows</a> | <a href="/azure/notification-hubs/notification-hubs-windows-phone-push-xplat-segmented-mpns-notification">Windows Phone</a>
+          - html: Pushmeldingen verzenden naar specifieke gebruikers - <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-gcm-android-push-to-user-google-notification">Android</a> | <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-ios-apple-apns-notification">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-windows-dotnet-wns-notification">Windows</a>
+          - html: Locatiegebaseerde pushmeldingen verzenden - <a href="/azure/notification-hubs/notification-hubs-push-bing-spatial-data-geofencing-notification">Windows</a>
+          - html: Persoonlijke en gelokaliseerde pushmeldingen verzenden - <a href="/azure/notification-hubs/notification-hubs-ios-xplat-localized-apns-push-notification">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-windows-store-dotnet-xplat-localized-wns-push-notification">Windows</a>
+  - title: Voorbeelden
     items:
-    - html: <a href="https://github.com/Azure/azure-notificationhubs-android">Android-SDK</a>
-    - html: <a href="https://github.com/Azure/azure-notificationhubs-ios">iOS-SDK</a>
-    - html: <a href="https://github.com/Azure/azure-notificationhubs-dotnet">.NET SDK</a>
-    - html: <a href="https://github.com/Azure/azure-notificationhubs-samples">Opslagplaats met voorbeelden (andere platformen)</a>
-    - html: <a href="/azure/notification-hubs/samples-powershell">PowerShell</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Azure Notification Hubs-voorbeeldapps zijn uit meerdere bronnen beschikbaar. We bundelen platformspecifieke voorbeelden met de afzonderlijke SDK's (koppelingen hieronder). De zelfstandige opslagplaats met voorbeelden bevat ook voorbeelden voor andere platformen.
+      - type: list
+        style: unordered
+        items:
+          - html: '<a href="https://github.com/Azure/azure-notificationhubs-android">Android SDK</a>'
+          - html: '<a href="https://github.com/Azure/azure-notificationhubs-ios">iOS SDK</a>'
+          - html: '<a href="https://github.com/Azure/azure-notificationhubs-dotnet">.NET SDK</a>'
+          - html: '<a href="https://github.com/Azure/azure-notificationhubs-samples">Opslagplaats met voorbeelden (andere platformen)</a>'
+          - html: <a href="/azure/notification-hubs/samples-powershell">PowerShell</a>
+  - title: Naslaginformatie
     items:
-    - html: <a href="https://docs.microsoft.com/powershell/module/az.notificationhubs">Azure PowerShell</a>
-    - html: <a href="/dotnet/api/microsoft.azure.notificationhubs">.NET SDK</a>
-    - html: <a href="/rest/api/notificationhubs">REST API</a>
+      - type: list
+        style: unordered
+        items:
+          - html: '<a href="https://docs.microsoft.com/powershell/module/az.notificationhubs">Azure PowerShell</a>'
+          - html: <a href="/dotnet/api/microsoft.azure.notificationhubs">.NET SDK</a>
+          - html: <a href="/rest/api/notificationhubs">REST API voor beheer</a>
+          - html: '<a href="https://docs.microsoft.com/previous-versions/azure/reference/dn223264(v%3dazure.100)">REST-API voor Notification Hubs-service</a>'
