--- a/articles/service-bus-messaging/TOC.yml
+++ b/articles/service-bus-messaging/TOC.yml
@@ -12,38 +12,44 @@ items:
   items:
   - name: Service Bus-wachtrijen
     items:
-    - name: Een Service Bus-wachtrij maken - Portal
-      href: service-bus-quickstart-portal.md
-    - name: Een Service Bus-wachtrij maken - PowerShell
-      href: service-bus-quickstart-powershell.md
-    - name: Een Service Bus-wachtrij maken - CLI
-      href: service-bus-quickstart-cli.md
-    - name: Berichten verzenden en ontvangen - .NET
-      href: service-bus-dotnet-get-started-with-queues.md
-    - name: Berichten verzenden en ontvangen - Java
-      href: service-bus-java-how-to-use-queues.md
-    - name: Berichten verzenden en ontvangen - Node.js
-      href: service-bus-nodejs-how-to-use-queues.md
-    - name: Berichten verzenden en ontvangen - PHP
-      href: service-bus-php-how-to-use-queues.md
-    - name: Berichten verzenden en ontvangen - Python
-      href: service-bus-python-how-to-use-queues.md
-    - name: Berichten verzenden en ontvangen - Ruby
-      href: service-bus-ruby-how-to-use-queues.md
+    - name: Een Service Bus-wachtrij maken
+      items:
+      - name: Azure Portal
+        href: service-bus-quickstart-portal.md
+      - name: Azure PowerShell
+        href: service-bus-quickstart-powershell.md
+      - name: Azure-CLI
+        href: service-bus-quickstart-cli.md
+    - name: Berichten verzenden en ontvangen
+      items:
+      - name: .NET
+        href: service-bus-dotnet-get-started-with-queues.md
+      - name: Java
+        href: service-bus-java-how-to-use-queues.md
+      - name: Node.js
+        href: service-bus-nodejs-how-to-use-queues.md
+      - name: PHP
+        href: service-bus-php-how-to-use-queues.md
+      - name: Python
+        href: service-bus-python-how-to-use-queues.md
+      - name: Ruby
+        href: service-bus-ruby-how-to-use-queues.md
   - name: Services Bus-onderwerpen en -abonnementen
     items:
-    - name: Publiceren en abonneren op berichten - .NET
-      href: service-bus-dotnet-how-to-use-topics-subscriptions.md
-    - name: Publiceren en abonneren op berichten - Java
-      href: service-bus-java-how-to-use-topics-subscriptions.md
-    - name: Publiceren en abonneren op berichten - Node.js
-      href: service-bus-nodejs-how-to-use-topics-subscriptions.md
-    - name: Publiceren en abonneren op berichten - PHP
-      href: service-bus-php-how-to-use-topics-subscriptions.md
-    - name: Publiceren en abonneren op berichten - Python
-      href: service-bus-python-how-to-use-topics-subscriptions.md
-    - name: Publiceren en abonneren op berichten - Ruby
-      href: service-bus-ruby-how-to-use-topics-subscriptions.md
+    - name: Publiceren en abonneren op berichten
+      items:
+      - name: .NET
+        href: service-bus-dotnet-how-to-use-topics-subscriptions.md
+      - name: Java
+        href: service-bus-java-how-to-use-topics-subscriptions.md
+      - name: Node.js
+        href: service-bus-nodejs-how-to-use-topics-subscriptions.md
+      - name: PHP
+        href: service-bus-php-how-to-use-topics-subscriptions.md
+      - name: Python
+        href: service-bus-python-how-to-use-topics-subscriptions.md
+      - name: Ruby
+        href: service-bus-ruby-how-to-use-topics-subscriptions.md
 - name: Zelfstudies
   items:
   - name: Inventaris bijwerken - PowerShell
@@ -238,9 +244,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azureservicebus
   - name: Video's
     href: https://azure.microsoft.com/documentation/videos/index/?services=service-bus
-ms.openlocfilehash: 464e19bc796e41045d0c8422718da39f2aa66a9b
-ms.sourcegitcommit: 9f4eb5a3758f8a1a6a58c33c2806fa2986f702cb
+ms.openlocfilehash: dba047983ffc8e0f32a8339c42286ba64e9ddce5
+ms.sourcegitcommit: 41015688dc94593fd9662a7f0ba0e72f044915d6
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/03/2019
-ms.locfileid: "58906273"
+ms.lasthandoff: 04/11/2019
+ms.locfileid: "59500223"
