--- a/articles/storage/index.yml
+++ b/articles/storage/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: aaaa5fedfbcc3683d725cad8e4eff9d6b8dcce08
-ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "58000710"
 documentType: LandingData
 title: Documentatie bij Azure Storage
 metadata:
-  title: Documentatie voor Azure Storage - zelfstudies, API-verwijzing | Microsoft Docs
-  description: Azure Storage is een door Microsoft beheerde cloudservice waarmee u toegang krijgt tot opslag met een zeer hoge beschikbaarheid, die bovendien veilig, duurzaam, schaalbaar en redundant is. Azure Storage omvat Azure Blobs, Azure Data Lake Storage Gen2, Azure Files, Azure Queues en Azure Tables.
+  title: 'Documentatie voor Azure Storage - zelfstudies, API-verwijzing | Microsoft Docs'
+  description: 'Azure Storage is een door Microsoft beheerde cloudservice waarmee u toegang krijgt tot opslag met een zeer hoge beschikbaarheid, die bovendien veilig, duurzaam, schaalbaar en redundant is. Azure Storage omvat Azure Blobs, Azure Data Lake Storage Gen2, Azure Files, Azure Queues en Azure Tables.'
   services: storage
   author: tamram
   manager: twooley
@@ -20,130 +14,130 @@ metadata:
   ms.date: 06/27/2018
   ms.author: tamram
 abstract:
-  description: Azure Storage is een door Microsoft beheerde service waarmee u toegang krijgt tot cloudopslag met een zeer hoge beschikbaarheid, die bovendien veilig, duurzaam, schaalbaar en redundant is. Azure Storage omvat Azure Blobs (objecten), Azure Data Lake Storage Gen2, Azure Files, Azure Queues en Azure Tables. Ontdek met onze snelstartgidsen en zelfstudies hoe u Azure-opslag gebruikt in uw toepassingen.
+  description: 'Azure Storage is een door Microsoft beheerde service waarmee u toegang krijgt tot cloudopslag met een zeer hoge beschikbaarheid, die bovendien veilig, duurzaam, schaalbaar en redundant is. Azure Storage omvat Azure Blobs (objecten), Azure Data Lake Storage Gen2, Azure Files, Azure Queues en Azure Tables. Ontdek met onze snelstartgidsen en zelfstudies hoe u Azure-opslag gebruikt in uw toepassingen.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: Leer met Azure Storage te werken aan de hand van deze QuickStarts.
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: media/index/portal.svg
-        text: Portal
-    - image:
-        src: media/index/logo_powershell.svg
-        text: PowerShell
-    - image:
-        src: media/index/cli.svg
-        text: Azure-CLI
-    - image:
-        src: media/index/logo_net.svg
-    - image:
-        src: media/index/logo_java.svg
-    - image:
-        src: media/index/logo_python.svg
-    - image:
-        src: media/index/logo_nodejs.svg
-    rows:
-    - title: Een opslagaccount maken
-      values:
-      - href: /azure/storage/common/storage-quickstart-create-account?tabs=portal
-      - href: /azure/storage/common/storage-quickstart-create-account?tabs=powershell
-      - href: /azure/storage/common/storage-quickstart-create-account?tabs=azure-cli
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-    - title: QuickStarts over blobs
-      values:
-      - href: /azure/storage/blobs/storage-quickstart-blobs-portal
-      - href: /azure/storage/blobs/storage-quickstart-blobs-powershell
-      - href: /azure/storage/blobs/storage-quickstart-blobs-cli
-      - href: /azure/storage/blobs/storage-quickstart-blobs-dotnet
-      - href: /azure/storage/blobs/storage-quickstart-blobs-java
-      - href: /azure/storage/blobs/storage-quickstart-blobs-python
-      - href: /azure/storage/blobs/storage-quickstart-blobs-nodejs
-    - title: Data Lake Storage Gen2
-      values:
-      - href: /azure/storage/blobs/data-lake-storage-quickstart-create-account
-      - href: /azure/storage/blobs/data-lake-storage-quickstart-create-account
-      - href: /azure/storage/blobs/data-lake-storage-quickstart-create-account
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-- title: Stapsgewijze zelfstudies
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+  - title: QuickStarts van vijf minuten
     items:
-    - title: Blobs
-      html: <p>Installatiekopiegegevens in de cloud uploaden en verwerken</p><ul><li><a href="/azure/storage/blobs/storage-upload-process-images">Installatiekopiegegevens uploaden en ophalen in de cloud</a></li><li><a href="/azure/event-grid/resize-images-on-storage-blob-upload-event?toc=%2fazure%2fstorage%2fblobs%2ftoc.json">Azure Functions activeren om blobs te verwerken</a></li><li><a href="/azure/storage/blobs/storage-secure-access-application">Toepassingsgegevens beveiligen</a></li><li><a href="/azure/storage/blobs/storage-monitor-troubleshoot-storage-application">Opslag controleren en problemen oplossen</a></li></ul><p>Een toepassing voor hoge beschikbaarheid ontwerpen</p><ul><li><a href="/azure/storage/blobs/storage-create-geo-redundant-storage">Uw toepassingsgegevens maximaal beschikbaar maken</a></li><li><a href="/azure/storage/blobs/storage-simulate-failure-ragrs-account-app">Een fout simuleren bij het openen van redundante opslag met leestoegang</a></li></ul><p><a href="/azure/storage/blobs/storage-unstructured-search">Niet-gestructureerde gegevens doorzoeken in Azure Storage</a></p>
-    - title: Data Lake Storage Gen2
-      html: <p><a href="/azure/storage/blobs/data-lake-storage-handle-data-using-databricks">Gegevens uitpakken, transformeren en laden met Azure Databricks</a></p><p><a href="/azure/storage/blobs/data-lake-storage-use-databricks-spark">Toegang tot Azure Data Lake Storage Gen2-gegevens met DataBricks met behulp van Spark</a></p><p><a href="/azure/storage/blobs/data-lake-storage-tutorial-extract-transform-load-hive">Gegevens extraheren, transformeren en laden met Apache Hive in Azure HDInsight</a></p>
-- title: Voorbeelden
-  items:
-  - type: paragraph
-    text: Zoek scripts voor veelvoorkomende beheertaken.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: Leer met Azure Storage te werken aan de hand van deze QuickStarts.
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: media/index/portal.svg
+              text: Portal
+          - image:
+              src: media/index/logo_powershell.svg
+              text: PowerShell
+          - image:
+              src: media/index/cli.svg
+              text: Azure-CLI
+          - image:
+              src: media/index/logo_net.svg
+          - image:
+              src: media/index/logo_java.svg
+          - image:
+              src: media/index/logo_python.svg
+          - image:
+              src: media/index/logo_nodejs.svg
+        rows:
+          - title: Een opslagaccount maken
+            values:
+              - href: /azure/storage/common/storage-quickstart-create-account?tabs=portal
+              - href: /azure/storage/common/storage-quickstart-create-account?tabs=azure-powershell
+              - href: /azure/storage/common/storage-quickstart-create-account?tabs=azure-cli
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+          - title: QuickStarts over blobs
+            values:
+              - href: /azure/storage/blobs/storage-quickstart-blobs-portal
+              - href: /azure/storage/blobs/storage-quickstart-blobs-powershell
+              - href: /azure/storage/blobs/storage-quickstart-blobs-cli
+              - href: /azure/storage/blobs/storage-quickstart-blobs-dotnet
+              - href: /azure/storage/blobs/storage-quickstart-blobs-java
+              - href: /azure/storage/blobs/storage-quickstart-blobs-python
+              - href: /azure/storage/blobs/storage-quickstart-blobs-nodejs
+          - title: Data Lake Storage Gen2
+            values:
+              - href: /azure/storage/blobs/data-lake-storage-quickstart-create-account
+              - href: /azure/storage/blobs/data-lake-storage-quickstart-create-account
+              - href: /azure/storage/blobs/data-lake-storage-quickstart-create-account
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+  - title: Stapsgewijze zelfstudies
     items:
-    - html: .NET &#58; <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=blob&sort=0&platform=dotnet">Blobs</a> | <a     href="https://azure.microsoft.com/resources/samples/?service=storage&term=file&sort=0&platform=dotnet">Files</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=queue&sort=0&platform=dotnet">Queues</a>
-    - html: Java &#58; <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=blob&sort=0&platform=java">Blobs</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=file&sort=0&platform=java">Files</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=queue&sort=0&platform=java">Queues</a>
-    - html: <a href="/azure/storage/blobs/storage-samples-blobs-powershell">Azure PowerShell</a>
-    - html: <a href="/azure/storage/blobs/storage-samples-blobs-cli">Azure-CLI</a>
-- title: Uw vaardigheden ontwikkelen met Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Blobs
+            html: <p>Installatiekopiegegevens in de cloud uploaden en verwerken</p><ul><li><a href="/azure/storage/blobs/storage-upload-process-images">Installatiekopiegegevens uploaden en ophalen in de cloud</a></li><li><a href="/azure/event-grid/resize-images-on-storage-blob-upload-event?toc=%2fazure%2fstorage%2fblobs%2ftoc.json">Azure Functions activeren om blobs te verwerken</a></li><li><a href="/azure/storage/blobs/storage-secure-access-application">Toepassingsgegevens beveiligen</a></li><li><a href="/azure/storage/blobs/storage-monitor-troubleshoot-storage-application">Opslag controleren en problemen oplossen</a></li></ul><p>Een toepassing voor hoge beschikbaarheid ontwerpen</p><ul><li><a href="/azure/storage/blobs/storage-create-geo-redundant-storage">Uw toepassingsgegevens maximaal beschikbaar maken</a></li><li><a href="/azure/storage/blobs/storage-simulate-failure-ragrs-account-app">Een fout simuleren bij het openen van redundante opslag met leestoegang</a></li></ul><p><a href="/azure/storage/blobs/storage-unstructured-search">Niet-gestructureerde gegevens doorzoeken in Azure Storage</a></p>
+          - title: Data Lake Storage Gen2
+            html: '<p><a href="/azure/storage/blobs/data-lake-storage-handle-data-using-databricks">Gegevens uitpakken, transformeren en laden met Azure Databricks</a></p><p><a href="/azure/storage/blobs/data-lake-storage-use-databricks-spark">Toegang tot Azure Data Lake Storage Gen2-gegevens met DataBricks met behulp van Spark</a></p><p><a href="/azure/storage/blobs/data-lake-storage-tutorial-extract-transform-load-hive">Gegevens uitpakken, transformeren en laden met Apache Hive in Azure HDInsight</a></p>'
+  - title: Voorbeelden
     items:
-    - title: Inleiding tot gegevens in Azure
-      href: /learn/modules/intro-to-data-in-azure/
-      image:
-        src: /learn/achievements/intro-to-data-in-azure.svg
-        href: //learn/modules/intro-to-data-in-azure/
-    - title: " Kies een gegevensopslagmethode in Azure"
-      href: /learn/modules/choose-storage-approach-in-azure/
-      image:
-        src: /learn/achievements/choose-storage-approach-in-azure.svg
-        href: /learn/modules/choose-storage-approach-in-azure/
-    - title: Een Azure-opslagaccount maken
-      href: /learn/modules/create-azure-storage-account/
-      image:
-        src: /learn/achievements/create-azure-storage-account.svg
-        href: /learn/modules/create-azure-storage-account/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-storage">Meer interactief leren...</a>
-- title: Gratis Pluralsight-videotraining
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: Zoek scripts voor veelvoorkomende beheertaken.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: '.NET &#58; <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=blob&sort=0&platform=dotnet">Blobs</a> | <a     href="https://azure.microsoft.com/resources/samples/?service=storage&term=file&sort=0&platform=dotnet">Files</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=queue&sort=0&platform=dotnet">Queues</a>'
+          - html: 'Java &#58; <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=blob&sort=0&platform=java">Blobs</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=file&sort=0&platform=java">Files</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=queue&sort=0&platform=java">Queues</a>'
+          - html: <a href="/azure/storage/blobs/storage-samples-blobs-powershell">Azure PowerShell</a>
+          - html: <a href="/azure/storage/blobs/storage-samples-blobs-cli">Azure-CLI</a>
+  - title: Uw vaardigheden ontwikkelen met Microsoft Learn
     items:
-    - title: Ontwikkelen met .NET op Azure
-      href: https://app.pluralsight.com/library/courses/developing-dotnet-microsoft-azure-getting-started/table-of-contents
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/developing-dotnet-microsoft-azure-getting-started/table-of-contents
-    - title: Ontwikkelen met Node.js op Azure
-      href: https://app.pluralsight.com/library/courses/developing-nodejs-microsoft-azure-getting-started/table-of-contents
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/developing-nodejs-microsoft-azure-getting-started/table-of-contents
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Inleiding tot gegevens in Azure
+            href: /learn/modules/intro-to-data-in-azure/
+            image:
+              src: /learn/achievements/intro-to-data-in-azure.svg
+              href: //learn/modules/intro-to-data-in-azure/
+          - title: "\_Kies een gegevensopslagmethode in Azure"
+            href: /learn/modules/choose-storage-approach-in-azure/
+            image:
+              src: /learn/achievements/choose-storage-approach-in-azure.svg
+              href: /learn/modules/choose-storage-approach-in-azure/
+          - title: Een Azure-opslagaccount maken
+            href: /learn/modules/create-azure-storage-account/
+            image:
+              src: /learn/achievements/create-azure-storage-account.svg
+              href: /learn/modules/create-azure-storage-account/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-storage">Meer interactief leren...</a>
+  - title: Gratis Pluralsight-videotraining
     items:
-    - title: Opdrachtregel
-      html: <p><a href="/powershell/storage">PowerShell</a></p><p><a href="/cli/azure/storage">Azure-CLI</a></p>
-    - title: Talen
-      html: <p><a href="/dotnet/api/overview/azure/storage/client?view=azure-dotnet">.NET</a></p><p><a href="/java/api/overview/azure/storage/client?view=azure-java-stable">Java</a></p><p><a href="/javascript/api/overview/azure/storage?view=azure-node-latest">Node.js</a></p><p><a href="/python/api/overview/azure/storage">Python</a></p><p><a href="https://azure.github.io/azure-storage-php/">PHP</a></p><p><a href="https://azure.github.io/azure-storage-ruby">Ruby</a></p><p><a href="https://azure.github.io/azure-storage-cpp">C++</a></p><p><a href="https://github.com/Azure/azure-storage-ios">iOS</a></p><p><a href="https://azure.github.io/azure-storage-android">Android</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/storageservices">API voor blobs, wachtrijen, tabellen en bestanden</a></p><p><a href="/rest/api/storagerp">Opslagresourceprovider-API</a></p><p><a href="/rest/api/storageimportexport">Import-/export-service-API</a></p>
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Ontwikkelen met .NET op Azure
+            href: 'https://app.pluralsight.com/library/courses/developing-dotnet-microsoft-azure-getting-started/table-of-contents'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://app.pluralsight.com/library/courses/developing-dotnet-microsoft-azure-getting-started/table-of-contents'
+          - title: Ontwikkelen met Node.js op Azure
+            href: 'https://app.pluralsight.com/library/courses/developing-nodejs-microsoft-azure-getting-started/table-of-contents'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://app.pluralsight.com/library/courses/developing-nodejs-microsoft-azure-getting-started/table-of-contents'
+  - title: Naslaginformatie
+    items:
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Opdrachtregel
+            html: <p><a href="/powershell/storage">PowerShell</a></p><p><a href="/cli/azure/storage">Azure-CLI</a></p>
+          - title: Talen
+            html: '<p><a href="/dotnet/api/overview/azure/storage/client?view=azure-dotnet">.NET</a></p><p><a href="/java/api/overview/azure/storage/client?view=azure-java-stable">Java</a></p><p><a href="/javascript/api/overview/azure/storage?view=azure-node-latest">Node.js</a></p><p><a href="/python/api/overview/azure/storage">Python</a></p><p><a href="https://azure.github.io/azure-storage-php/">PHP</a></p><p><a href="https://azure.github.io/azure-storage-ruby">Ruby</a></p><p><a href="https://azure.github.io/azure-storage-cpp">C++</a></p><p><a href="https://github.com/Azure/azure-storage-ios">iOS</a></p><p><a href="https://azure.github.io/azure-storage-android">Android</a></p>'
+          - title: REST
+            html: '<p><a href="/rest/api/storageservices">API voor blobs, wachtrijen, tabellen en bestanden</a></p><p><a href="/rest/api/storagerp">Opslagresourceprovider-API</a></p><p><a href="/rest/api/storageimportexport">Service-API importeren/exporteren</a></p>'
